FIX: rated_movie crudl, update operations
- Rewrite update model in sqlc and request model
- Make roper rated_movie handler functions calls
