# docs/swagger.yaml
@@ -1,62 +1,4 @@
 definitions:
-  db.FavoriteMovie:
-    properties:
-      movie_id:
-        type: string
-      user_id:
-        type: string
-    type: object
-  db.GetMovieByIDRow:
-    properties:
-      amount_rates:
-        type: integer
-      created_at:
-        $ref: '#/definitions/pgtype.Timestamp'
-      id:
-        type: string
-      rating:
-        type: number
-      title:
-        type: string
-    type: object
-  db.GetMovieRatingListRow:
-    properties:
-      movie_id:
-        type: string
-      rating:
-        $ref: '#/definitions/pgtype.Int4'
-    type: object
-  db.Movie:
-    properties:
-      created_at:
-        $ref: '#/definitions/pgtype.Timestamp'
-      id:
-        type: string
-      title:
-        type: string
-    type: object
-  db.RatedMovie:
-    properties:
-      movie_id:
-        type: string
-      rating:
-        $ref: '#/definitions/pgtype.Int4'
-      user_id:
-        type: string
-    type: object
-  db.UserDatum:
-    properties:
-      created_at:
-        $ref: '#/definitions/pgtype.Timestamp'
-      id:
-        type: string
-      is_admin:
-        type: boolean
-      login:
-        type: string
-      name:
-        type: string
-    type: object
   pgtype.InfinityModifier:
     enum:
     - 1
@@ -68,14 +10,6 @@ definitions:
     - Infinity
     - Finite
     - NegativeInfinity
-  pgtype.Int4:
-    properties:
-      int32:
-        format: int32
-        type: integer
-      valid:
-        type: boolean
-    type: object
   pgtype.Timestamp:
     properties:
       infinityModifier:
@@ -99,7 +33,7 @@ definitions:
     properties:
       movie_list:
         items:
-          $ref: '#/definitions/db.Movie'
+          $ref: '#/definitions/sqlc.Movie'
         type: array
     type: object
   reqmodel.MovieRequest:
@@ -111,7 +45,7 @@ definitions:
     properties:
       rated_movie_list:
         items:
-          $ref: '#/definitions/db.GetMovieRatingListRow'
+          $ref: '#/definitions/sqlc.GetMovieRatingListRow'
         type: array
       user_id:
         type: string
@@ -121,13 +55,13 @@ definitions:
       movie_id:
         type: string
       rating:
-        $ref: '#/definitions/pgtype.Int4'
+        type: integer
     type: object
   reqmodel.UserListResponse:
     properties:
       user_list:
         items:
-          $ref: '#/definitions/db.UserDatum'
+          $ref: '#/definitions/sqlc.UserDatum'
         type: array
     type: object
   reqmodel.UserRequest:
@@ -137,6 +71,62 @@ definitions:
       name:
         type: string
       password:
+        type: string
+    type: object
+  sqlc.FavoriteMovie:
+    properties:
+      movie_id:
+        type: string
+      user_id:
+        type: string
+    type: object
+  sqlc.GetMovieByIDRow:
+    properties:
+      amount_rates:
+        type: integer
+      created_at:
+        $ref: '#/definitions/pgtype.Timestamp'
+      id:
+        type: string
+      rating:
+        type: number
+      title:
+        type: string
+    type: object
+  sqlc.GetMovieRatingListRow:
+    properties:
+      movie_id:
+        type: string
+      rating:
+        type: integer
+    type: object
+  sqlc.Movie:
+    properties:
+      created_at:
+        $ref: '#/definitions/pgtype.Timestamp'
+      id:
+        type: string
+      title:
+        type: string
+    type: object
+  sqlc.RatedMovie:
+    properties:
+      movie_id:
+        type: string
+      rating:
+        type: integer
+      user_id:
+        type: string
+    type: object
+  sqlc.UserDatum:
+    properties:
+      created_at:
+        $ref: '#/definitions/pgtype.Timestamp'
+      id:
+        type: string
+      login:
+        type: string
+      name:
         type: string
     type: object
 externalDocs:
@@ -194,7 +184,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/db.Movie'
+            $ref: '#/definitions/sqlc.Movie'
         "404":
           description: Not Found
           schema:
@@ -210,7 +200,7 @@ paths:
       summary: Create movie
       tags:
       - movie
-  /movie/{id}:
+  /movie/{movie_id}:
     delete:
       consumes:
       - application/json
@@ -218,7 +208,7 @@ paths:
       parameters:
       - description: Movie ID
         in: path
-        name: id
+        name: movie_id
         required: true
         type: string
       produces:
@@ -238,6 +228,7 @@ paths:
             additionalProperties:
               type: string
             type: object
+      summary: Delete movie
       tags:
       - movie
     get:
@@ -247,7 +238,7 @@ paths:
       parameters:
       - description: Movie ID
         in: path
-        name: id
+        name: movie_id
         required: true
         type: string
       produces:
@@ -256,7 +247,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/db.GetMovieByIDRow'
+            $ref: '#/definitions/sqlc.GetMovieByIDRow'
         "404":
           description: Not Found
           schema:
@@ -279,7 +270,7 @@ paths:
       parameters:
       - description: Movie ID
         in: path
-        name: id
+        name: movie_id
         required: true
         type: string
       - description: Movie creation data
@@ -294,7 +285,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/db.Movie'
+            $ref: '#/definitions/sqlc.Movie'
         "404":
           description: Not Found
           schema:
@@ -354,7 +345,7 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/db.UserDatum'
+            $ref: '#/definitions/sqlc.UserDatum'
         "400":
           description: Bad Request
           schema:
@@ -376,7 +367,7 @@ paths:
       summary: Create user
       tags:
       - user
-  /user/{id}:
+  /user/{user_id}:
     delete:
       consumes:
       - application/json
@@ -384,7 +375,7 @@ paths:
       parameters:
       - description: User ID
         in: path
-        name: id
+        name: user_id
         required: true
         type: string
       produces:
@@ -404,6 +395,7 @@ paths:
             additionalProperties:
               type: string
             type: object
+      summary: Delete user
       tags:
       - user
     get:
@@ -413,7 +405,7 @@ paths:
       parameters:
       - description: User ID
         in: path
-        name: id
+        name: user_id
         required: true
         type: string
       produces:
@@ -422,7 +414,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/db.UserDatum'
+            $ref: '#/definitions/sqlc.UserDatum'
         "404":
           description: Not Found
           schema:
@@ -445,7 +437,7 @@ paths:
       parameters:
       - description: User ID
         in: path
-        name: id
+        name: user_id
         required: true
         type: string
       - description: User creation data
@@ -460,7 +452,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/db.UserDatum'
+            $ref: '#/definitions/sqlc.UserDatum'
         "400":
           description: Bad Request
           schema:
@@ -486,7 +478,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get user favorite_movie list
+      description: Get user's favorite movie list
       parameters:
       - description: User ID
         in: path
@@ -512,6 +504,7 @@ paths:
             additionalProperties:
               type: string
             type: object
+      summary: Get favorite movie list
       tags:
       - favorite_movie
   /user/{user_id}/favorite_movie/{movie_id}:
@@ -547,12 +540,13 @@ paths:
             additionalProperties:
               type: string
             type: object
+      summary: Delete favorite movie
       tags:
       - favorite_movie
     post:
       consumes:
       - application/json
-      description: Add movie to favorite
+      description: Add movie to user's favorite
       parameters:
       - description: User ID
         in: path
@@ -570,7 +564,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/db.FavoriteMovie'
+            $ref: '#/definitions/sqlc.FavoriteMovie'
         "404":
           description: Not Found
           schema:
@@ -583,13 +577,14 @@ paths:
             additionalProperties:
               type: string
             type: object
+      summary: Add favorite movie
       tags:
       - favorite_movie
   /user/{user_id}/rated_movie:
     get:
       consumes:
       - application/json
-      description: Get rated by user movie info
+      description: Get movie rating by user id
       parameters:
       - description: User ID
         in: path
@@ -615,6 +610,7 @@ paths:
             additionalProperties:
               type: string
             type: object
+      summary: Get  movie rating
       tags:
       - rated_movie
     patch:
@@ -639,7 +635,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/db.RatedMovie'
+            $ref: '#/definitions/sqlc.RatedMovie'
         "404":
           description: Not Found
           schema:
@@ -652,6 +648,7 @@ paths:
             additionalProperties:
               type: string
             type: object
+      summary: Update movie rating
       tags:
       - rated_movie
     post:
@@ -676,7 +673,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/db.RatedMovie'
+            $ref: '#/definitions/sqlc.RatedMovie'
         "404":
           description: Not Found
           schema:
@@ -689,13 +686,14 @@ paths:
             additionalProperties:
               type: string
             type: object
+      summary: Get  movie rating
       tags:
       - rated_movie
   /user/{user_id}/rated_movie/{movie_id}:
     delete:
       consumes:
       - application/json
-      description: Delete movie rating
+      description: Delete certain movie rating
       parameters:
       - description: User ID
         in: path
@@ -724,6 +722,7 @@ paths:
             additionalProperties:
               type: string
             type: object
+      summary: Delete movie rating
       tags:
       - rated_movie
 swagger: "2.0"
